# MicroMouse

./: README.md
Hardware/gcode/: README.txt  base_plate_v3_0.28mm.gcode  beta_base_plate_0.28mm.gcode  beta_base_plate_v2_0.28mm.gcode  beta_cam_mount_0.28mm.gcode  beta_mid_plate_0.28mm.gcode  beta_top_plate_0.28mm.gcode  beta_top_plate_v2_0.28mm.gcode  maze_connector_v1_0.28mm.gcode  psu_bracket_test_base_plate_v7_0.28mm.gcode  psu_mounting_test_0.28mm.gcode  top_plate_v2_0.28mm.gcode
Hardware/kicad_schematic/: Custom.kicad_sym  MicroMouse.kicad_prl  MicroMouse.kicad_pro  MicroMouse.kicad_sch
Hardware/models/base_plate/: base_plate_V3.step  base_plate_v4.step  base_plate_v5.step  base_plate_v6.step  base_plate_v7.step  beta_base_plate.stl  beta_base_plate_v2.stl
Hardware/models/maze_connector/: maze_connector_v1.stl
Hardware/models/mid_plate/: beta_mid_plate.stl  mid_plate_v2.step
Hardware/models/misc/: beta_cam_mount.stl  psu_bracket_test_base_plate_v7.step  psu_mounting_test.stl
Hardware/models/pololu-4760-4761-models/: magnetic-encoder-with-top-entry-connector-for-micro-metal-gearmotors.step
Maze_Algorithm/: install.sh  pyproject.toml  requirements.txt  run.sh
Maze_Algorithm/mazes/: explored_maze.npy  live_edit.npy
Maze_Algorithm/src/: MicroMouseInterfacer.py  algorithm.py  constants.py  main_physical.py  main_simulation.py  screen_objects.py
Maze_Algorithm/src/adapter/: micro_mouse_adapter.py
Maze_Algorithm/src/maze/: maze_builder.py  physical_maze.py
MicroMouse/: .cproject  .mxproject  MicroMouse.ioc
MicroMouse/Core/Inc/: AnalogSensor.h  (+12 more)
(+19 files in other folders)
